# MRZvIS-sem4

./: .gitignore  .gitmodules  README.md
laba_1/: .gitignore  BinaryCalculator.cpp  BinaryCalculator.h  CMakeLists.txt  Pipeline.cpp  Pipeline.h  Visualizer.cpp  Visualizer.h  main.cpp
laba_1/Tests/: test.cpp
laba_1/tests/: CMakeLists.txt  test1.cpp
laba_2/: main.cpp
